[package]
name = "nft_escrow_sc"
version = "0.1.0"
edition = "2021"
authors = ["hosokawa"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
near-contract-tools = "0.4.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
