[workspace]
members = [
    "./ft_token",
    "./nft_collection",
    "./proxy_token",
    "./nft_escrow",
]

[profile.release]
codegen-units = 1
# s = optimize for binary size ("z" would additionally turn off loop vectorization)
opt-level = "z"
# link time optimization
lto = true
debug = false
panic = "abort"
overflow-checks = true