[package]
name = "ft_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
near-contract-tools = "0.5.0"

[dev-dependencies]
workspaces = "0.4.1"
anyhow = "1.0.62"
near-units = "0.2.0"
tokio = "1.20.1"

[lib]
crate-type = ["cdylib"]