[package]
name = "nft_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
near-contract-tools = "0.4.0"

[lib]
crate-type = ["cdylib", "rlib"]