[package]
name = "nft_escrow_sc"
version = "0.1.0"
edition = "2021"
authors = ["hosokawa"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
near-contract-tools = "0.5.0"
serde = "1"
serde_json = "1"

[dev-dependencies]
anyhow = "1.0.62"
tokio = "1.20.1"
workspaces = "0.4.1"
near-units = "0.2.0"

[lib]
crate-type = ["cdylib"]
